# CC_tools

./: .gitignore  CLAUDE.md  LICENSE  README.md  settings.json
agents/architecture/: architect-reviewer.md  backend-architect.md  cloud-architect.md  database-architect.md  frontend-architect.md  microservices-architect.md  security-architect.md
agents/business/: business-analyst.md  content-marketer.md  customer-success-manager.md  product-manager.md  sales-engineer.md  scrum-master.md  technical-writer.md  ux-researcher.md
agents/data-ai/: ai-engineer.md  data-analyst.md  data-engineer.md  data-scientist.md  llm-architect.md  machine-learning-engineer.md  mlops-engineer.md  nlp-engineer.md  postgres-pro.md  prompt-engineer.md
agents/developer-experience/: build-engineer.md  cli-developer.md  dependency-manager.md  documentation-engineer.md  git-workflow-manager.md  legacy-modernizer.md  refactoring-specialist.md
agents/development/: #Untitled-1#  api-specialist.md  data-specialist.md  database-specialist.md  devops-specialist.md  django-specialist.md  dotnet-specialist.md  express-specialist.md  fastapi-specialist.md  fullstack-developer.md  fullstack-investigator.md  golang-specialist.md  integration-specialist.md  java-specialist.md  javascript-specialist.md  legacy-assessment-specialist.md  mobile-developer.md  mysql-specialist.md  nextjs-specialist.md  nodejs-backend-developer.md  php-specialist.md  python-backend-developer.md  python-specialist.md  react-specialist.md  ruby-specialist.md  (+4 more)
cc_multi/: LICENSE  README.md  claude-multi-manager-dependencies.md  claude-multi-manager.sh  example-.claude-projects.yaml  install.sh  pyproject.toml
cc_multi/cpsm/: __init__.py  __main__.py  app.py  cli.py
cc_multi/cpsm/controllers/: __init__.py  layout_controller.py
cc_multi/cpsm/data/: __init__.py  importer.py  migrations.py  repository.py  schema.py
cc_multi/cpsm/platform/: __init__.py  base.py  desktop_entry.py  itmux_backend.py  paths.py  powershell_quoter.py  process_runner.py  psmux_backend.py  ssh_binary.py  terminal_launcher.py  tmux_backend.py
cc_multi/cpsm/resources/: __init__.py
cc_multi/cpsm/resources/icons/: __init__.py
cc_multi/cpsm/resources/launcher_templates/: __init__.py  _placeholder.sh  claude-local.sh  claude-remote.sh  local-shell.sh  ssh-shell.sh
cc_multi/cpsm/resources/translations/: __init__.py
cc_multi/cpsm/services/: __init__.py  config_service.py  correlation_service.py  default_layout_generator.py  discovery_service.py  import_service.py  key_service.py  layout_service.py  monitor_service.py  session_service.py  template_service.py
cc_multi/cpsm/ui/: __init__.py  main_window.py
cc_multi/cpsm/ui/dialogs/: __init__.py  about.py  adopt_session.py  connection_editor.py  deploy_key.py  drop_disambiguation.py  generate_key.py  group_editor.py  import_preview.py  launch_conflict.py  launcher_templates.py  layout_editor.py  reimport_merge.py  screens_save.py  settings.py  ssh_key_manager.py  validation_errors.py  welcome.py
cc_multi/cpsm/ui/widgets/: __init__.py  active_sessions.py  connection_form.py  group_legend.py  group_panel.py  screen_map.py  screen_map_context_menu.py  session_list.py
cc_multi/cpsm/workers/: __init__.py  correlation_worker.py  key_deploy_worker.py  reconnect_worker.py  ssh_worker.py  status_poller.py
cc_multi/packaging/: AppImageBuilder.yml  cpsm.spec
cc_multi/packaging/wix/: cpsm.wxs
commands/: a.md  g.md  k.md  p.md
docs/: Pipeline_SETUP.md
hooks/: phase-gate.sh  pre-tool-use.sh  require-pipeline.sh  session-resume.sh  validate-pipeline.sh
(+72 files in other folders)
