[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cpsm"
version = "0.1.0"
description = "Cross-Platform Session Manager — desktop GUI for managing tmux/SSH sessions and Claude Code projects"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "CPSM contributors" }]
keywords = ["tmux", "ssh", "session-manager", "claude-code", "qt", "pyside6"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: Terminals :: Terminal Emulators/X Terminals",
]

dependencies = [
  "PySide6>=6.6",
  "ruamel.yaml>=0.18",
  "pydantic>=2.5",
  "cryptography>=42.0",
  "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.4",
  "pytest-mock>=3.12",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pyinstaller>=6.5",
]
linux = [
  "python-xlib>=0.33; sys_platform == 'linux'",
]
windows = [
  "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
cpsm = "cpsm.__main__:main"

[project.urls]
Homepage = "https://github.com/example/cpsm"
Issues = "https://github.com/example/cpsm/issues"

[tool.hatch.build.targets.wheel]
packages = ["cpsm"]

[tool.hatch.build.targets.wheel.force-include]
"cpsm/resources/launcher_templates" = "cpsm/resources/launcher_templates"
"cpsm/resources/icons" = "cpsm/resources/icons"
"cpsm/resources/translations" = "cpsm/resources/translations"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle, pyflakes
  "I",                # isort
  "UP",               # pyupgrade
  "B",                # bugbear
  "SIM",              # simplify
  "RUF",              # ruff-specific
]
ignore = [
  "E501",             # line length is enforced by formatter
  "UP009",            # UTF-8 header is mandatory per project policy (CLAUDE.md)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

# Per-package mypy overrides will be added as those packages are imported
# (Phase 7: keyring; Phase 10: PySide6; Phase 8: Xlib fallback).

[[tool.mypy.overrides]]
module = ["ruamel.*"]
ignore_missing_imports = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=cpsm",
  "--cov-report=term-missing",
]
markers = [
  "integration: requires real tmux/itmux/psmux installed",
  "ui: requires Qt offscreen platform (pytest-qt)",
  "slow: long-running tests",
]

[tool.coverage.run]
branch = true
source = ["cpsm"]
omit = ["cpsm/__main__.py"]
concurrency = ["thread"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
